--- a/style.css
+++ b/style.css
@@ -1,58 +1,124 @@
+:root {
+  --red: #ff6666;
+  --light-gray: #f2f2f2;
+  --deep-gray: #737373;
+  --petal: #4d9900;
+}
 * {
   margin: 0;
   padding: 0;
 }
 
-/* overriding bootstrap css start */
+/* overriding bootstrap css */
 .nav-link {
   color: black;
   font-weight: bold;
   margin: auto 20px;
 }
 .nav-link:hover {
-  color: gray;
+  color: var(--deep-gray);
 }
 .d-flex {
   gap: 10px;
 }
-/* overriding bootstrap css end */
 
-.petals-container {
-  display: flex;
-  gap: 10px;
+/*banner css */
+.petals {
+  max-width: 100vw;
+  max-height: 600px;
+  overflow: hidden;
 }
-.banner1 {
-  flex-grow: 2;
-}
-.side-banners {
+.side-container {
+  padding-right: 0;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  gap: 20px;
+}
+.main-banner img {
+  width: 100%;
+}
+
+/*feature css */
+.feature {
+  width: 100%;
+  background-color: var(--red);
+  color: white;
+  text-align: center;
+  margin: 30px auto;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+/*flower card css */
+.flowers-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.flowers-row {
+  display: flex;
   gap: 10px;
 }
-
-/*tab view */
-@media only screen and (max-width: 790px) {
-  .petals-container {
-    flex-wrap: wrap;
-  }
-
-  .banner1 img {
-    width: 100%;
-  }
-  .side-banners {
-    flex-grow: 0;
-    width: 100%;
-    flex-direction: row;
-    justify-content: stretch;
-  }
-  .side-banners .img {
-  }
+.flower-card {
+  background-color: var(--light-gray);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.flower-card img {
+  width: 100%;
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+.flower-card h3 {
+  font-weight: bold;
 }
 
+/*footer css */
+.footer {
+  margin: 0;
+  background-color: black;
+}
+.footer-content h3 {
+  margin-top: 30px;
+  color: var(--red);
+}
+.footer-content .span-content {
+  color: white;
+  font-size: 0.8em;
+}
+.petal-color {
+  color: var(--petal);
+}
 /*mobile view */
 @media only screen and (max-width: 576px) {
-  .nav {
-    background-color: gray;
+  /*bootstrap css overriding*/
+  .navbar-collapse {
+    background-color: var(--light-gray);
+  }
+  .nav-item:hover,
+  .nav-link:hover {
+    background-color: var(--red);
+    color: white;
+  }
+  /*side banner css */
+  .side-container {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  .side-container img {
+    max-width: 48%;
+  }
+  /*flower card css*/
+  .flowers-section {
+    align-items: center;
+  }
+  .flowers-row {
+    flex-direction: column;
   }
 }
