--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@
 }
 
 /* overriding bootstrap css */
+.navbar {
+  padding: 0.5rem 1rem 0.5rem 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
 .nav-link {
   color: black;
   font-size: 1rem;
   font-weight: bold;
-  padding-left: 2rem !important;
+  padding-left: 2.2rem !important;
 }
 
 .nav-link:hover {
@@ -29,7 +36,7 @@
 /*banner css */
 .petals {
   overflow: hidden;
-  padding-top: 65px;
+  padding-top: 5rem;
   display: flex;
   gap: 1em;
 }
@@ -140,10 +147,10 @@
   }
 
   .nav-link {
-    font-size: 2rem;
     font-weight: normal;
     margin: 10px 0 !important;
-    padding: 0.7rem 0 !important;
+    font-size: 1.8rem;
+    padding: 0.8rem 0 !important;
   }
 
   /*banner css */
