--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   padding: 0;
 }
 
+* ::-webkit-scrollbar {
+  display: none;
+}
+
 /* overriding bootstrap css */
 .navbar {
   padding: 0.5rem 1rem 0.5rem 0;
@@ -18,6 +22,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .nav-link {
   color: black;
   font-size: 1rem;
@@ -30,7 +35,7 @@
 }
 
 .d-flex {
-  gap: 10px;
+  gap: 1em;
 }
 
 /*banner css */
@@ -38,7 +43,7 @@
   overflow: hidden;
   padding-top: 5rem;
   display: flex;
-  gap: 1em;
+  gap: 1rem;
 }
 
 .main-banner {
@@ -51,7 +56,7 @@
 
 .side-container {
   display: flex;
-  gap: 1em;
+  gap: 1rem;
   flex-direction: column;
   width: 30%;
 }
@@ -67,7 +72,7 @@
   background-color: var(--red);
   color: white;
   text-align: center;
-  margin: 30px auto;
+  margin: 40px auto;
   font-size: 30px;
   font-weight: bold;
 }
@@ -77,12 +82,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 2em;
 }
 
 .flowers-row {
   display: flex;
-  gap: 10px;
+  gap: 1em;
 }
 
 .flower-card {
@@ -97,15 +102,17 @@
 }
 
 .flower-card img {
-  width: 100%;
+  width: 80%;
   border: 1px solid transparent;
   border-radius: 50%;
 }
 
 .flower-card h3 {
+  margin-top: 1em;
   font-size: 1.4em;
   font-weight: bold;
 }
+
 .flower-card p {
   font-size: 0.8em;
 }
@@ -113,12 +120,17 @@
 /*footer css */
 .footer {
   margin: 0;
+  margin-top: 40px;
+  padding: 10px 0;
   background-color: black;
 }
 
 .footer-content h3 {
-  margin-top: 30px;
   color: var(--red);
+}
+
+.footer-content .social-media {
+  margin-bottom: 0.5rem;
 }
 
 .footer-content .span-content {
@@ -128,6 +140,13 @@
 
 .petal-color {
   color: var(--petal);
+}
+
+/*tab view */
+@media only screen and (min-width: 576px) and (max-width: 968px) {
+  .flowers-section {
+    gap: 1em;
+  }
 }
 
 /*mobile view */
